--- a/census_income_2019_EDA_Edward.ipynb
+++ b/census_income_2019_EDA_Edward.ipynb
@@ -1656,6 +1656,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    865247\n",
+       "2    794480\n",
+       "Name: SEX, dtype: int64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.SEX.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
